--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,56 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  background-color: green;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#card {
+  background-color: #fff;
+  width: 360px;
+  aspect-ratio: 2/3;
+  border-radius: 16px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+}
+
+.heart .suit,
+.diamond .suit {
+  color: red;
+}
+
+#card .suit:first-child {
+  top: 0px;
+  left: 20px;
+}
+
+#card .suit:last-child {
+  bottom: 10px;
+  right: 20px;
+}
+
+.suit {
+  font-size: 120px;
+  position: absolute;
+}
+
+.rank {
+  font-size: 180px;
+}
+
+button {
+  padding: 10px 15px;
+}
