--- a/src/style.css
+++ b/src/style.css
@@ -7,17 +7,18 @@
 .container {
   background-color: green;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 20px;
+  padding: 40px;
 }
 
 #card {
   background-color: #fff;
-  width: 360px;
+  width: 320px;
   aspect-ratio: 2/3;
   border-radius: 16px;
   position: relative;
@@ -51,6 +52,46 @@
   font-size: 180px;
 }
 
-button {
+#generatorButton {
   padding: 10px 15px;
+  background-color: #424242;
+  color: #fff;
+  border: none;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 8px;
+  margin-top: 30px;
+  cursor: pointer;
+}
+
+.controls-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  padding: 14px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  width: 260px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+  font-family: "Roboto", sans-serif;
+}
+
+.controls-container p {
+  margin: 0;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.inputGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.inputGroup input {
+  font-size: 15px;
 }
